--- a/workflow.yaml
+++ b/workflow.yaml
@@ -1,10 +1,10 @@
-# Copyright 2021 bigquery-workflows-load Authors
+# Copyright 2023 Google LLC
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
 #
-#      http://www.apache.org/licenses/LICENSE-2.0
+#     http://www.apache.org/licenses/LICENSE-2.0
 #
 # Unless required by applicable law or agreed to in writing, software
 # distributed under the License is distributed on an "AS IS" BASIS,
@@ -20,14 +20,14 @@
 #   b) Poll job + sleep
 #   c) Return status
 # 3) Sub-workflow (Query)
-
+# [START workflows_bigquery_load]
 main:
   steps:
     - constants:
         assign:
           - create_job_url: CREATE_JOB_URL
-          - poll_job_url: POLL_JOB_URL
-          - run_job_url: RUN_JOB_URL
+          - poll_job_url: POLL_BIGQUERY_JOB_URL
+          - run_job_url: RUN_BIGQUERY_JOB_URL
           - create_query_url: CREATE_QUERY_URL
           - region: BQ_REGION
           - table_name: BQ_DATASET_TABLE_NAME
@@ -185,3 +185,4 @@ runBigQueryJob:
           - condition: ${pollJobState.body.status == 3}
             return: ${pollJobState.body.status}
         next: sleepAndPollLoad
+# [END workflows_bigquery_load]
